--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <div class="main-div">
     <div>
         <app-user-list [users]="users"></app-user-list>
+        <!--<app-user-list (created)="cargarUsuarios()"></app-user-list>-->
     </div>
     <div>
         Gastos:
