--- a/src/app/shares/shares.component.css
+++ b/src/app/shares/shares.component.css
@@ -1,3 +1,16 @@
+@media (min-width: 1100px) {
+    .card-container {
+        display:grid;
+        grid-template-columns: auto auto auto;
+    }  
+} 
+@media (min-width: 800px) and (max-width: 1100px) {
+    .card-container {
+        display:grid;
+        grid-template-columns: auto auto;
+    }    
+} 
+
 .double-row {
     display:grid;
     grid-template-columns: 50% 50%;
