--- a/src/styles.css
+++ b/src/styles.css
@@ -7,9 +7,9 @@ body {
     box-sizing: border-box;/* Evitar que los bordes incrementen el tamaño del contenedor */
     border: 5px dashed #2369B0;
     border-radius: 20px;
-    margin-bottom: 1em;
     width: 100%;
     padding: 0em 1em 0em 1em;
+    margin: 0em 0em 1em 0em;
 }
 
 button {
